--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -1,12 +1,12 @@
 % Institute of Computer Science thesis template
-% authors: Sven Laur, Liina Kamm
-% last change Tõnu Tamme 09.05.2017
+% authors: Sven Laur, Liina Kamm, Tõnu Tamme
+% last change Eero Vainikko <eero.vainikko@ut.ee> 14.09.2021
 %--
 % Compilation instructions:
 % 1. Choose main language on line 55-56 (English or Estonian)
 % 2. Compile 1-3 times to get refences right
-% pdflatex bachelors-thesis-template
-% bibtex bachelors-thesis-template
+% pdflatex unitartucs-thesis-template
+% bibtex unitartucs-thesis-template
 %--
 % Please use references like this:
 % <text> <non-breaking-space> <cite/ref-command> <punctuation>
@@ -35,8 +35,8 @@
 % For Windows and Linux the right magic lines are   
 % \usepackage[latin1]{inputenc}
 % \usepackage[latin5]{inputenc}
-%%\usepackage[utf8]{inputenc} %Package inputenc Error: Unicode char ´ (U+B4) not set up for use with LaTeX
-\usepackage[utf8x]{inputenc}
+%
+\usepackage[utf8]{inputenc} %standard encoding since 2018 (can be commented out?)
 \usepackage[T1]{fontenc} %Absolutely critical for *hyphenation* of words with non-ASCII letters.
 
 % Typeset text in Times Roman instead of Computer Modern (EC)
@@ -55,24 +55,22 @@
 \usepackage[estonian, english]{babel} %the thesis is in English 
 %\usepackage[english, estonian]{babel} %the thesis is in Estonian
 
-
 % Change Babel document elements 
 \addto\captionsestonian{%
   \renewcommand{\refname}{Viidatud kirjandus}%
   \renewcommand{\appendixname}{Lisad}%
 }
 
-
 % If you have problems with Estonian keywords in the bibliography
 %\usepackage{biblatex}
 %\usepackage[backend=biber]{biblatex}
 %\usepackage[style=alphabetic]{biblatex}
-% plain --> \usepackage[style=numeric]{biblatex}
-% abbrv --> \usepackage[style=numeric,firstinits=true]{biblatex}
-% unsrt --> \usepackage[style=numeric,sorting=none]{biblatex}
-% alpha --> \usepackage[style=alphabetic]{biblatex}
+%% plain --> \usepackage[style=numeric]{biblatex}
+%% abbrv --> \usepackage[style=numeric,firstinits=true]{biblatex}
+%% unsrt --> \usepackage[style=numeric,sorting=none]{biblatex}
+%% alpha --> \usepackage[style=alphabetic]{biblatex}
 %\DefineBibliographyStrings{estonian}{and={ja}}
-%\addbibresource{bachelor-thesis.bib}
+%\addbibresource{unitartucs-thesis.bib}
 
 
 % General packages for math in general, theorems and symbols 
@@ -158,7 +156,7 @@
   breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
   %title=\lstname,                 % show the filename of files included with \lstinputlisting;
                                    % also try caption instead of title
-  keywordstyle=\color{blue},       % keyword style
+  keywordstyle=\color{blue},       % keywCurriculumord style
   commentstyle=\color{dkgreen},    % comment style
   stringstyle=\color{mauve},       % string literal style
   escapeinside={\%*}{*)},          % if you want to add a comment within your code
@@ -167,7 +165,7 @@
 
 
 % Obscure packages to write logic formulae and program semantics
-% Unless you do a bachelor thesis on program semantics or static code analysis you do not need that
+% Unless you do a thesis on program semantics or static code analysis you do not need that
 % http://logicmatters.net/resources/ndexamples/proofsty3.html <= writing type rules => use semantic::inference
 % ftp://tug.ctan.org/tex-archive/macros/latex/contrib/semantic/semantic.pdf
 \usepackage{proof}
@@ -188,6 +186,7 @@
 \newcommand{\opDiv}{\ensuremath{\backslash \mathsf{div}}\xspace} 
 
 % Nice Todo box
+\setlength{\marginparwidth}{2cm}
 \newcommand{\TODO}{\todo[inline]}
 
 % A way to define theorems and lemmata
@@ -202,15 +201,18 @@
 \thispagestyle{empty}
 \begin{center}
 
-\iflanguage{english}{%
 \large
-UNIVERSITY OF TARTU\\%[2mm]
+\iflanguage{english}{%
+UNIVERSITY OF TARTU\\
+Faculty of Science and Technology\\
 Institute of Computer Science\\
-Computer Science Curriculum\\%[2mm]
-}{%
+Computer Science Curriculum\\
+%Software Engineering Curriculum\\
+}{%\iflanguage
 TARTU ÜLIKOOL\\
+Loodus- ja täppisteaduste valdkond\\
 Arvutiteaduse instituut\\
-Informaatika õppekava\\%[2mm]
+Informaatika õppekava\\
 }%\iflanguage
 
 %\vspace*{\stretch{5}}
@@ -225,10 +227,12 @@ Informaatika õppekava\\%[2mm]
 %\vspace*{\stretch{7}}
 \vspace{20mm}
 
+\Large
 \iflanguage{english}{%
-\Large Bachelor's Thesis (9 ECTS)
-}{%
-\Large Bakalaureusetöö (9 EAP)
+%Bachelor's Thesis (9 ECTS)
+Master's Thesis (30 ECTS)
+}{%\iflanguage
+Bakalaureusetöö (9 EAP)
 }%\iflanguage
 
 \end{center}
@@ -239,17 +243,17 @@ Informaatika õppekava\\%[2mm]
  {
  \setlength{\extrarowheight}{5pt}
  \begin{tabular}{r l} 
-  \sffamily \iflanguage{english}{Supervisor}{Juhendaja}: & \sffamily Axel Rose, MSc \\
-  \sffamily \iflanguage{english}{Supervisor}{Juhendaja}: & \sffamily May Flower, PhD
+  \sffamily \iflanguage{english}{Supervisor(s)}{Juhendaja(d)}: &                    \sffamily Axel Rose, MSc \\
+             & \sffamily May Flower, PhD
  \end{tabular}
  }
 \end{flushright}
 
-%\vspace*{\stretch{3}}
+%\vspace*{\stretch{3}}\iflanguage
 %\vspace{10mm}
 
 \vfill
-\centerline{Tartu 2017}
+\centerline{\large Tartu \the\year}
 
 %===END TITLE PAGE
 
@@ -275,9 +279,9 @@ Informaatika õppekava\\%[2mm]
 \noindent\textbf{Abstract:}
 
 \noindent
-Many interpreting program languages are dynamically typed, such as Visual Basic or Python. As a result, it is easy to write programs that crash due to mismatches of provided and expected data types.  One possible solution to this problem is automatic type derivation during compilation. In this work, we consider study how to detect type errors in the \textsc{Whitespace} language by using fourth order logic formulae as annotations. The main result of this thesis is a new triple-exponential type inference algorithm for the fourth order logic formulae. This is a significant advancement as the question whether there exists such an algorithm was an open question. 
-All previous attempts to solve the problem lead lead to logical inconsistencies or required tedious user interaction in terms of interpretative dance. Although the resulting algorithm is slightly inefficient, it can be used to detect obscure programming bugs in the \textsc{Whitespace} language. The latter significantly improves productivity. Our practical experiments showed that productivity is comparable to average Java programmer.   
-From a theoretical viewpoint, the result is only a small advancement in rigorous treatment of higher order logic formulae. The results obtained by us do not generalise to formulae with the fifth or higher order. 
+Many interpreting program languages are dynamically typed, such as Visual Basic or Python. As a result, it is easy to write programs that crash due to mismatches of provided and expected data types.  One possible solution to this problem is automatic type derivation during compilation. In this work, we consider study how to detect type errors in the \textsc{Whitespace} language by using fourth-order logic formulae as annotations. The main result of this thesis is a new triple-exponential type inference algorithm for the fourth-order logic formulae. This is a significant advancement as the question of whether there exists such an algorithm was an open question. 
+All previous attempts to solve the problem lead to logical inconsistencies or require tedious user interaction in terms of interpretative dance. Although the resulting algorithm is slightly inefficient, it can be used to detect obscure programming bugs in the \textsc{Whitespace} language. The latter significantly improves productivity. Our practical experiments showed that productivity is comparable to average Java programmer.   
+From a theoretical viewpoint, the result is only a small advancement in a rigorous treatment of higher-order logic formulae. The results obtained by us do not generalise to formulae with the fifth or higher order. 
 
 \vspace*{1ex}
 
@@ -358,7 +362,7 @@ the paper is significantly enhanced by their inclusion.}
 \TODO{What was my contribution?} 
 \TODO{What you are doing in each section (a sentence or two per section)}
 
-Tip: if it's hard for you to start writing, then try to split it to smaller parts, e.g. if the title is ``Type Inference for a Cryptographic Protocol Prover Tool'' then the ``What is it'' can be divided into ``what is type inference'', ``what is cryptographic protocol'' and ``what is the prover tool''. These three can also be split to smaller parts etc.
+Tip: if it's hard for you to start writing, then try to split it into smaller parts, e.g., if the title is ``Type Inference for a Cryptographic Protocol Prover Tool'' then the ``What is it'' can be divided into ``what is type inference'', ``what is cryptographic protocol'' and ``what is the prover tool''. These three can also be split into smaller parts etc.
 
 
 
@@ -384,7 +388,7 @@ Some text...
 
 \subsection{Title of Subsection 2} 
 
-Rule: If you divide the text into subsections (or subsubsections) then there has to be at least two of them, otherwise do not create any. 
+Rule: If you divide the text into subsections (or subsubsections), then there has to be at least two of them, otherwise do not create any. 
 
 Tip: You can also use paragraphs, e.g.
 \paragraph{Type rules for integers.} Some text ...
@@ -396,29 +400,29 @@ Tip: You can also use paragraphs, e.g.
 
 \subsection{How to use references} \label{sec:using_ref}
 
-\paragraph{Cross-references to figures, tables and other document elements.}
-LaTeX  internally numbers all kind of objects that have sequence numbers:
+\paragraph{Cross-references to figures, tables, and other document elements.}
+LaTeX  internally numbers all kinds of objects that have sequence numbers:
 \begin{itemize}
 \item chapters, sections, subsections;
 \item figures, tables, algorithms;
 \item equations, equation arrays.
 \end{itemize}
-To reference them automatically, you have to generate a label using \texttt{$\backslash$label\{some-name\}} just after the object that has the number inside. Usually, labels of different objects are split into different namespaces by adding dedicated prefix, such as \texttt{sec:}, \texttt{fig:}. To use the corresponding reference, you must use command \texttt{$\backslash$ref} or \texttt{$\backslash$eqref}. For instance, we can reference this subsection by calling Section~\ref{sec:using_ref}. Note that there should be a nonbreakable space \texttt{\~} between the name of the object and the reference so that they would not appear on different lines (does not work in Estonian).          
+To reference them automatically, you have to generate a label using \texttt{$\backslash$label\{some-name\}} just after the object that has the number inside. Usually, labels of different objects are split into different namespaces by adding a dedicated prefix, such as \texttt{sec:}, \texttt{fig:}. To use the corresponding reference, you must use command \texttt{$\backslash$ref} or \texttt{$\backslash$eqref}. For instance, we can reference this subsection by calling Section~\ref{sec:using_ref}. Note that there should be a nonbreakable space \texttt{\~} between the name of the object and the reference so that they would not appear on different lines (does not work in Estonian).          
 
 
 
 \paragraph{Citations.}
-Usually, you also want to reference articles, webpages, tools or programs or books. For that you should use citations and references. The system is similar to the cross-referencing system in LaTeX. For each reference you must assign a unique label. Again, there are many naming schemes for labels. However, as you have a short document anything works. To reference to a particular source you must use \texttt{$\backslash$cite\{label\}} or \texttt{$\backslash$cite[page]\{label\}}. 
+Usually, you also want to reference articles, webpages, tools or programs, or books. For that, you should use citations and references. The system is similar to the cross-referencing system in LaTeX. For each reference, you must assign a unique label. Again, there are many naming schemes for labels. However, as you have a short document, anything works. To reference to a particular source you must use \texttt{$\backslash$cite\{label\}} or \texttt{$\backslash$cite[page]\{label\}}. 
 
-References themselves can be part of a LaTeX source file. For that you need to define a bibliography section. However, this approach is really uncommon. It is much more easier to use BibTeX to synthesise the right reference form for you. For that you must use two commands in the LaTeX source
+References themselves can be part of a LaTeX source file. For that, you need to define a bibliography section. However, this approach is really uncommon. It is much easier to use BibTeX to synthesise the right reference form for you. For that, you must use two commands in the LaTeX source:
 \begin{itemize}
 \item $\backslash$bibliographystyle\{alpha\} or $\backslash$bibliographystyle\{plain\}
 \item $\backslash$bibliography\{file-name\}
 \end{itemize}
-The first command determines whether the references are numbered by letter-number combinations or by cryptic numbers. It is more common to use \texttt{alpha} style. The second command determines the file containing the bibliographic entries. The file should end with \texttt{bib} extension. Each reference there is in specific form. The simplest way to avoid all technicalities is to use graphical frontend  Jabref (\url{http://jabref.sourceforge.net/}) to manage references. Another alternative is to use DBLP database of references and copy BibTeX entries directly form there.   
+The first command determines whether the references are numbered by letter-number combinations or by cryptic numbers. It is more common to use \texttt{alpha} style. The second command determines the file containing the bibliographic entries. The file should end with \texttt{bib} extension. Each reference there is in a specific form. The simplest way to avoid all technicalities is to use graphical frontend  Jabref (\url{http://jabref.sourceforge.net/}) to manage references. Another alternative is to use the DBLP database of references and copy BibTeX entries directly from there.   
     
    
-The following paragraph shows how references can be used. Game-based proving is a way to analyse security of a cryptographic protocol~\cite{GameB_1, GameB_2}. There are automatic provers, such as {CertiCrypt\-}~\cite{certicrypt} and ProVerif~\cite{proVerif}.
+The following paragraph shows how references can be used. Game-based proving is a way to analyse the security of a cryptographic protocol~\cite{GameB_1, GameB_2}. There are automatic provers, such as {CertiCrypt\-}~\cite{certicrypt} and ProVerif~\cite{proVerif}.
 
 
 
@@ -458,7 +462,7 @@ Rule: All the figures, tables and extras in the thesis have to be referred to so
 \end{center}
 \end{figure}
 
-Tip: If you add a screenshot then labeling the parts might help make the text more understandable (panel C vs bottom left part), e.g.
+Tip: If you add a screenshot, then labeling the parts might help make the text more understandable (panel C vs bottom left part), e.g.
 
 
 \begin{figure} [htbp]
@@ -491,9 +495,9 @@ Tip: If you add a screenshot then labeling the parts might help make the text mo
 \end{figure}
 
 
-Example: A screenshot of \proveit can be seen on Figure~\ref{fig:proveit_screenshot}. The user first enters the pseudocode of the initial game in panel B. \proveit also keeps track of all the previous games showing the progress on a graph seen in panel A.
+Example: A screenshot of \proveit can be seen in Figure~\ref{fig:proveit_screenshot}. The user first enters the pseudocode of the initial game in panel B. \proveit also keeps track of all the previous games showing the progress on a graph seen in panel A.
 
-There are two figures side by side on Figure~\ref{fig:LCA_2_solutions}.
+There are two figures side by side in Figure~\ref{fig:LCA_2_solutions}.
 
 
 
@@ -627,7 +631,7 @@ Tip: We can use minipage to create a frame around some important information.
 
 % BibTeX bibliography
 \bibliographystyle{alpha} %plain=[1], alpha=[BGZ09]
-\bibliography{bachelor-thesis}
+\bibliography{unitartucs-thesis}
 
 \addcontentsline{toc}{section}{\refname}
 
@@ -669,6 +673,7 @@ Tip: We can use minipage to create a frame around some important information.
 \newpage
 
 %=== Licence in English
+\newcommand{\licencehint}[2]{\\\hspace*{#1}\textsl(#2)\par}
 \newcommand\EngLicence{{%
 \selectlanguage{english}
 \section*{II. Licence}
@@ -677,32 +682,31 @@ Tip: We can use minipage to create a frame around some important information.
 
 \subsection*{Non-exclusive licence to reproduce thesis and make thesis public}
 
-I, \textbf{Alice Cooper},
+I, \textbf{Alice Cooper}, %author's name
+  \licencehint{10mm}{author's name}
 
 \begin{enumerate}
 \item
-herewith grant the University of Tartu a free permit (non-exclusive licence) to:
-\begin{enumerate}
-\item[1.1]
-reproduce, for the purpose of preservation and making available to the public, including for addition to the DSpace digital archives until expiry of the term of validity of the copyright, and
-\item[1.2]
-make available to the public via the web environment of the University of Tartu, including via the DSpace digital archives until expiry of the term of validity of the copyright,
-\end{enumerate}
-
-of my thesis
-
-\textbf{Type Inference for Fourth Order Logic Formulae}
-
-supervised by Axel Rose and May Flower
-
+herewith grant the University of Tartu a free permit (non-exclusive licence) to
+\par
+reproduce, for the purpose of preservation, including for adding to the DSpace digital archives until the expiry of the term of copyright,
+\par
+\textbf{Type Inference for Fourth Order Logic Formulae}, %
+  \licencehint{10mm}{title of thesis}
+\par
+supervised by Axel Rose and May Flower. %supervisor's name
+  \licencehint{10mm}{supervisor's name}
 \item
-I am aware of the fact that the author retains these rights.
+I grant the University of Tartu a permit to make the work specified in p. 1 available to the public via the web environment of the University of Tartu, including via the DSpace digital archives, under the Creative Commons licence CC BY NC ND 3.0, which allows, by giving appropriate credit to the author, to reproduce, distribute the work and communicate it to the public and prohibits the creation of derivative works and any commercial use of the work until the expiry of the term of copyright.
 \item
-I certify that granting the non-exclusive licence does not infringe the intellectual property rights or rights arising from the Personal Data Protection Act. 
+I am aware of the fact that the author retains the rights specified in p. 1 and 2.
+\item
+I certify that granting the non-exclusive licence does not infringe other persons' intellectual property rights or rights arising from the personal data protection legislation. 
 \end{enumerate}
 
 \noindent
-Tartu, dd.mm.yyyy
+Alice Cooper\\ %author's name
+\textbf{\textsl{dd/mm/yyyy}}
 }}%\newcommand\EngLicence
 
 
@@ -713,34 +717,34 @@ Tartu, dd.mm.yyyy
 
 \addcontentsline{toc}{subsection}{II. Litsents}
 
-\subsection*{Lihtlitsents lõputöö reprodutseerimiseks ja lõputöö üldsusele kättesaadavaks tegemiseks}
+\subsection*{Lihtlitsents lõputöö reprodutseerimiseks ja üldsusele kättesaadavaks tegemiseks}
 
-Mina, \textbf{Alice Cooper},
-
-\begin{enumerate}
-\item
-annan Tartu Ülikoolile tasuta loa (lihtlitsentsi) enda loodud teose
-
-\textbf{Tüübituletus neljandat järku loogikavalemitele}
-
-mille juhendajad on Axel Rose ja May Flower
+Mina, \textbf{Alice Cooper}, %author's name
+  \licencehint{10mm}{autori nimi}
 
 \begin{enumerate}
-\item[1.1]
-reprodutseerimiseks säilitamise ja üldsusele kättesaadavaks tegemise eesmärgil, sealhulgas digitaalarhiivi DSpace-is lisamise eesmärgil kuni autoriõiguse kehtivuse tähtaja lõppemiseni;
-\item[1.2]
-üldsusele kättesaadavaks tegemiseks Tartu Ülikooli veebikeskkonna kaudu, sealhulgas digitaalarhiivi DSpace´i kaudu kuni autoriõiguse kehtivuse tähtaja lõppemiseni.
-\end{enumerate}
-
-
 \item
-olen teadlik, et punktis 1 nimetatud õigused jäävad alles ka autorile.
+annan Tartu Ülikoolile tasuta loa (lihtlitsentsi) minu loodud teose
+\par
+\textbf{Tüübituletus neljandat järku loogikavalemitele}, %title of thesis
+    \licencehint{10mm}{lõputöö pealkiri}
+\par
+mille juhendaja(d) on Axel Rose ja May Flower, %supervisor's name(s)
+  \licencehint{10mm}{juhendaja nimi}
+\par
+reprodutseerimiseks eesmärgiga seda säilitada, sealhulgas lisada digitaalarhiivi DSpace kuni autoriõiguse kehtivuse lõppemiseni.
+\par
 \item
-kinnitan, et lihtlitsentsi andmisega ei rikuta teiste isikute intellektuaalomandi ega isikuandmete kaitse seadusest tulenevaid õigusi. 
+Annan Tartu Ülikoolile loa teha punktis 1 nimetatud teos üldsusele kättesaadavaks Tartu Ülikooli veebikeskkonna, sealhulgas digitaalarhiivi DSpace kaudu Creative Commonsi litsentsiga CC BY NC ND 3.0, mis lubab autorile viidates teost reprodutseerida, levitada ja üldsusele suunata ning keelab luua tuletatud teost ja kasutada teost ärieesmärgil, kuni autoriõiguse kehtivuse lõppemiseni.
+\item
+Olen teadlik, et punktides 1 ja 2 nimetatud õigused jäävad alles ka autorile.
+\item
+Kinnitan, et lihtlitsentsi andmisega ei riku ma teiste isikute intellektuaalomandi ega isikuandmete kaitse õigusaktidest tulenevaid õigusi. 
 \end{enumerate}
 
 \noindent
-Tartus, pp.kk.aaaa
+Alice Cooper\\ %author's name
+\textbf{\textsl{pp.kk.aaaa}}
 }}%\newcommand\EstLicence
 
 
@@ -749,4 +753,5 @@ Tartus, pp.kk.aaaa
 
 
 \end{document}
+
 
