Start unitartucs-thesis class

--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -12,7 +12,7 @@
 % <text> <non-breaking-space> <cite/ref-command> <punctuation>
 % This is an example~\cite{example}.
 
-\documentclass[12pt]{article}
+\documentclass{unitartucs-thesis}
 
 % A package for setting layout and margins for your thesis
 \usepackage[a4paper]{geometry}
