Move page and font setup to class

--- a/unitartucs-thesis.cls
+++ b/unitartucs-thesis.cls
@@ -1,3 +1,12 @@
 \ProvidesClass{unitartucs-thesis}[2024-09-23 v0.1]
 
 \LoadClass[12pt]{article}
+
+\RequirePackage[a4paper]{geometry}
+
+% Typeset text in Times Roman instead of Computer Modern (EC)
+\RequirePackage{times} % TODO: replace with non-deprecated package
+
+% Suggested packages:
+\RequirePackage{microtype}  %towards typographic perfection...
+\RequirePackage{inconsolata} %nicer font for code listings. (Use \ttfamily for lstinline bastype)
