Move babel to class

--- a/unitartucs-thesis.cls
+++ b/unitartucs-thesis.cls
@@ -2,6 +2,15 @@
 
 \LoadClass[12pt]{article}
 
+\DeclareOption{english}{
+    \PassOptionsToPackage{english}{babel}
+}
+\DeclareOption{estonian}{
+    \PassOptionsToPackage{estonian}{babel}
+}
+
+\ProcessOptions* % process options in order for correct language order for babel
+
 \RequirePackage[a4paper]{geometry}
 
 % Typeset text in Times Roman instead of Computer Modern (EC)
@@ -10,3 +19,11 @@
 % Suggested packages:
 \RequirePackage{microtype}  %towards typographic perfection...
 \RequirePackage{inconsolata} %nicer font for code listings. (Use \ttfamily for lstinline bastype)
+
+\RequirePackage{babel}
+
+% Change Babel document elements
+\addto\captionsestonian{%
+  \renewcommand{\refname}{Viidatud kirjandus}%
+  \renewcommand{\appendixname}{Lisad}%
+}
