--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -12,7 +12,13 @@
 % <text> <non-breaking-space> <cite/ref-command> <punctuation>
 % This is an example~\cite{example}.
 
-\documentclass{unitartucs-thesis}
+% Use package babel for English or Estonian
+% If you use Estonian make sure that Estonian hyphenation is installed
+% - hypen-estonian or eehyp packages
+%
+%===Choose the main language in thesis
+\documentclass[estonian,english]{unitartucs-thesis} %the thesis is in English
+% \documentclass[english,estonian]{unitartucs-thesis} %the thesis is in Estonian
 
 % When you write in Estonian then you want to use text with right character set
 % By default LaTeX does not know what to do with õäöu letters. You have to specify
@@ -29,19 +35,6 @@
 \usepackage[utf8]{inputenc} %standard encoding since 2018 (can be commented out?)
 \usepackage[T1]{fontenc} %Absolutely critical for *hyphenation* of words with non-ASCII letters.
 
-% Use package babel for English or Estonian
-% If you use Estonian make sure that Estonian hyphenation is installed
-% - hypen-estonian or eehyp packages
-%
-%===Choose the main language in thesis
-\usepackage[estonian, english]{babel} %the thesis is in English
-%\usepackage[english, estonian]{babel} %the thesis is in Estonian
-
-% Change Babel document elements
-\addto\captionsestonian{%
-  \renewcommand{\refname}{Viidatud kirjandus}%
-  \renewcommand{\appendixname}{Lisad}%
-}
 
 % If you have problems with Estonian keywords in the bibliography
 %\usepackage{biblatex}
