--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -172,65 +172,8 @@
 %%% BEGIN DOCUMENT
 \begin{document}
 
-%===BEGIN TITLE PAGE
-\thispagestyle{empty}
-\begin{center}
-
-\large
-\iflanguage{english}{%
-UNIVERSITY OF TARTU\\
-Faculty of Science and Technology\\
-Institute of Computer Science\\
-Computer Science Curriculum\\
-%Software Engineering Curriculum\\
-}{%\iflanguage
-TARTU ÜLIKOOL\\
-Loodus- ja täppisteaduste valdkond\\
-Arvutiteaduse instituut\\
-Informaatika õppekava\\
-}%\iflanguage
-
-%\vspace*{\stretch{5}}
-\vspace{25mm}
-
-\Large Alice Cooper
-
-\vspace{4mm}
-
-\huge Type Inference for Fourth Order Logic Formulae
-
-%\vspace*{\stretch{7}}
-\vspace{20mm}
-
-\Large
-\iflanguage{english}{%
-%Bachelor's Thesis (9 ECTS)
-Master's Thesis (30 ECTS)
-}{%\iflanguage
-Bakalaureusetöö (9 EAP)
-}%\iflanguage
-
-\end{center}
-
-\vspace{2mm}
-
-\begin{flushright}
- {
- \setlength{\extrarowheight}{5pt}
- \begin{tabular}{r l}
-  \sffamily \iflanguage{english}{Supervisor(s)}{Juhendaja(d)}: &                    \sffamily Axel Rose, MSc \\
-             & \sffamily May Flower, PhD
- \end{tabular}
- }
-\end{flushright}
-
-%\vspace*{\stretch{3}}\iflanguage
-%\vspace{10mm}
-
-\vfill
-\centerline{\large Tartu \the\year}
-
-%===END TITLE PAGE
+%===TITLE PAGE
+\maketitle
 
 % If the thesis is printed on both sides of the page then
 % the second page must be must be empty. Comment this out
