Use standard \title and \author for \maketitle

--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -168,6 +168,8 @@
 \newtheorem{theorem}{Theorem}
 
 
+\title{Type Inference for Fourth Order Logic Formulae}
+\author{Alice Cooper}
 
 %%% BEGIN DOCUMENT
 \begin{document}
