Extract environments and commands for info page

--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -190,43 +190,23 @@
 \newpage
 
 %=== Info in English
-\newcommand\EngInfo{{%
-\selectlanguage{english}
-\noindent\textbf{\large Type Inference for Fourth Order Logic Formulae}
-
-\vspace*{3ex}
-
-\noindent\textbf{Abstract:}
-
-\noindent
+\begin{info}
+\begin{abstract}
 Many interpreting program languages are dynamically typed, such as Visual Basic or Python. As a result, it is easy to write programs that crash due to mismatches of provided and expected data types.  One possible solution to this problem is automatic type derivation during compilation. In this work, we consider study how to detect type errors in the \textsc{Whitespace} language by using fourth-order logic formulae as annotations. The main result of this thesis is a new triple-exponential type inference algorithm for the fourth-order logic formulae. This is a significant advancement as the question of whether there exists such an algorithm was an open question.
 All previous attempts to solve the problem lead to logical inconsistencies or require tedious user interaction in terms of interpretative dance. Although the resulting algorithm is slightly inefficient, it can be used to detect obscure programming bugs in the \textsc{Whitespace} language. The latter significantly improves productivity. Our practical experiments showed that productivity is comparable to average Java programmer.
 From a theoretical viewpoint, the result is only a small advancement in a rigorous treatment of higher-order logic formulae. The results obtained by us do not generalise to formulae with the fifth or higher order.
+\end{abstract}
 
-\vspace*{1ex}
-
-\noindent\textbf{Keywords:}\\
-\TODO{List of keywords}
+\keywords{\TODO{List of keywords}}
 %Layout, formatting, template
 
-\vspace*{1ex}
-
-\noindent\textbf{CERCS:}\TODO{CERCS code and name:~\url{https://www.etis.ee/Portal/Classifiers/Details/d3717f7b-bec8-4cd9-8ea4-c89cd56ca46e}}
-
-\vspace*{1ex}
-}}%\newcommand\EngInfo
+\cercs{\TODO{CERCS code and name:~\url{https://www.etis.ee/Portal/Classifiers/Details/d3717f7b-bec8-4cd9-8ea4-c89cd56ca46e}}}
+\end{info}
 
 
 %=== Info in Estonian
-\newcommand\EstInfo{{%
-\selectlanguage{estonian}
-\noindent\textbf{\large Tüübituletus neljandat järku loogikavalemitele}
-\vspace*{1ex}
-
-\noindent\textbf{Lühikokkuvõte:}
-
-%\noindent ...
-
+\begin{otherinfo}{estonian}{Tüübituletus neljandat järku loogikavalemitele}
+\begin{abstract}
 \TODO{One or two sentences providing a basic introduction to the field, comprehensible to a scientist in
 any discipline.}
 \TODO{Two to three sentences of
@@ -244,24 +224,13 @@ comprehensible to a scientist in any
 discipline, may be included in the first paragraph
 if the editor considers that the accessibility of
 the paper is significantly enhanced by their inclusion.}
+\end{abstract}
 
-\vspace*{1ex}
-
-\noindent\textbf{Võtmesõnad:}\\
-\TODO{List of keywords}
+\keywords{\TODO{List of keywords}}
 %Layout, formatting, template
 
-\vspace*{1ex}
-
-\noindent\textbf{CERCS:}\TODO{CERCS kood ja nimetus:~\url{https://www.etis.ee/Portal/Classifiers/Details/d3717f7b-bec8-4cd9-8ea4-c89cd56ca46e}}
-
-\vspace*{1ex}
-}}%\newcommand\EstInfo
-
-
-%=== Determine the order of languages on Info page
-\iflanguage{english}{\EngInfo}{\EstInfo}
-\iflanguage{estonian}{\EngInfo}{\EstInfo}
+\cercs{\TODO{CERCS kood ja nimetus:~\url{https://www.etis.ee/Portal/Classifiers/Details/d3717f7b-bec8-4cd9-8ea4-c89cd56ca46e}}}
+\end{otherinfo}
 
 
 \newpage
