--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -561,28 +561,7 @@ Tip: We can use minipage to create a frame around some important information.
 
 \newpage
 
-%=== Licence in English
-% \newcommand{\licencehint}[2]{\\\hspace*{#1}\textsl(#2)\par}
-\newcommand\EngLicence{{%
-\selectlanguage{english}
-\section*{II. Licence}
-
-\addcontentsline{toc}{subsection}{II. Licence}
-}}%\newcommand\EngLicence
-
-
-%=== Licence in Estonian
-\newcommand\EstLicence{{%
-\selectlanguage{estonian}
-\section*{II. Litsents}
-
-\addcontentsline{toc}{subsection}{II. Litsents}
-}}%\newcommand\EstLicence
-
-
-%===Choose the licence in active language
-\iflanguage{english}{\EngLicence}{\EstLicence}
-
+%=== Licence
 \printlicence
 
 
