Add \supervisor command for \maketitle

--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -170,6 +170,7 @@
 
 \title{Type Inference for Fourth Order Logic Formulae}
 \author{Alice Cooper}
+\supervisor{Axel Rose\degree{MSc} \and May Flower\degree{PhD}}
 
 %%% BEGIN DOCUMENT
 \begin{document}
