--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -547,15 +547,7 @@ Tip: We can use minipage to create a frame around some important information.
 
 
 \newpage
-%\appendix
-%\section*{\appendixname}
-\iflanguage{english}%
-  {\section*{Appendix}
-  \addcontentsline{toc}{section}{Appendix}
-  }%
-  {\section*{Lisad}
-  \addcontentsline{toc}{section}{Lisad}}
-
+\begin{appendices}
 
 \section*{I. Glossary}
 \addcontentsline{toc}{subsection}{I. Glossary}
@@ -565,6 +557,7 @@ Tip: We can use minipage to create a frame around some important information.
 %=== Licence
 \printlicence
 
+\end{appendices}
 
 \end{document}
 
