Number appendix sections automatically

--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -549,8 +549,7 @@ Tip: We can use minipage to create a frame around some important information.
 \newpage
 \begin{appendices}
 
-\section*{I. Glossary}
-\addcontentsline{toc}{subsection}{I. Glossary}
+\section{Glossary}
 
 \newpage
 
