Add \curriculum command for \maketitle

--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -171,6 +171,9 @@
 \title{Type Inference for Fourth Order Logic Formulae}
 \author{Alice Cooper}
 \supervisor{Axel Rose\degree{MSc} \and May Flower\degree{PhD}}
+\curriculum{Computer Science Curriculum}
+% \curriculum{Software Engineering Curriculum}
+% \curriculum{Informaatika õppekava}
 
 %%% BEGIN DOCUMENT
 \begin{document}
