--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -174,6 +174,9 @@
 \curriculum{Computer Science Curriculum}
 % \curriculum{Software Engineering Curriculum}
 % \curriculum{Informaatika õppekava}
+\thesis{Master's Thesis (30 ECTS)}
+% \thesis{Bakalaureusetöö (9 EAP)}
+% \thesis{Bachelor's Thesis (9 ECTS)}
 
 %%% BEGIN DOCUMENT
 \begin{document}
