Fix certiCrypt cite case

--- a/sections/section2.tex
+++ b/sections/section2.tex
@@ -53,4 +53,4 @@ References themselves can be part of a LaTeX source file. For that, you need to 
 The first command determines whether the references are numbered by letter-number combinations or by cryptic numbers. It is more common to use \texttt{alpha} style. The second command determines the file containing the bibliographic entries. The file should end with \texttt{bib} extension. Each reference there is in a specific form. The simplest way to avoid all technicalities is to use graphical frontend  Jabref (\url{http://jabref.sourceforge.net/}) to manage references. Another alternative is to use the DBLP database of references and copy BibTeX entries directly from there.
 
 
-The following paragraph shows how references can be used. Game-based proving is a way to analyse the security of a cryptographic protocol~\cite{GameB_1, GameB_2}. There are automatic provers, such as {CertiCrypt\-}~\cite{certicrypt} and ProVerif~\cite{proVerif}.
+The following paragraph shows how references can be used. Game-based proving is a way to analyse the security of a cryptographic protocol~\cite{GameB_1, GameB_2}. There are automatic provers, such as {CertiCrypt\-}~\cite{certiCrypt} and ProVerif~\cite{proVerif}.
