Fix kamm12 month
BibLaTeX warns otherwise.

--- a/unitartucs-thesis.bib
+++ b/unitartucs-thesis.bib
@@ -32,7 +32,7 @@
   author = {Liina Kamm},
   title = {{ProveIt -- How to make proving cryptographic protocols less tedious}},
   howpublished = {Talk at the 21st Estonian Computer Science Theory Days at Kubija},
-  month = {January},
+  month = {1},
   year = {2012},
   file = {:/Users/tiina/Desktop/Thesis/Documents/papers/2012-05-tiina-bachelors-thesis/References/kamm-slides.pdf:PDF},
   timestamp = {2012.04.27},
