Fix bibliography link target

--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -212,8 +212,7 @@
 
 % BibLaTeX bibliography
 \newpage
-\addcontentsline{toc}{section}{\refname}
-\printbibliography %biblatex
+\printbibliography[heading=bibintoc] %biblatex
 
 
 \newpage
