Add automatic \clearpage before \section

--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -202,10 +202,7 @@
 \begin{appendices}
 
 \input{sections/glossary}
-
-% licence
-\clearpage
-\printlicence
+\printlicence % licence
 
 \end{appendices}
 
