Add PDF bookmarks for info page and ToC

--- a/sections/info.tex
+++ b/sections/info.tex
@@ -1,4 +1,5 @@
 \newpage
+\pdfbookmark[section]{\infoname}{toc} % add info page link to PDF bookmarks, but not table of contents itself
 
 %=== Info in English
 \begin{info}
