--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -173,6 +173,7 @@
 
 % table of contents
 \newpage
+\pdfbookmark[section]{\contentsname}{toc} % add table of contents link to PDF bookmarks, but not table of contents itself
 \tableofcontents
 
 % Remember to remove this from the final thesis version
