Add \title and \author to PDF metadata

--- a/unitartucs-thesis.cls
+++ b/unitartucs-thesis.cls
@@ -243,7 +243,7 @@
 \AtEndPreamble{ % workaround to avoid hyperref option clash
     % Packages for getting clickable links in PDF file
     %\usepackage{hyperref}
-    \usepackage[hidelinks]{hyperref} %hide red (blue,green) boxes around links
+    \usepackage[hidelinks,pdfusetitle]{hyperref} %hide red (blue,green) boxes around links
     \usepackage[numbered,open]{bookmark} % need bookmark for \bookmarksetupnext
 }
 
