Fix info page \pdfbookmark name

--- a/sections/info.tex
+++ b/sections/info.tex
@@ -1,5 +1,5 @@
 \newpage
-\pdfbookmark[section]{\infoname}{toc} % add info page link to PDF bookmarks, but not table of contents itself
+\pdfbookmark[section]{\infoname}{info} % add info page link to PDF bookmarks, but not table of contents itself
 
 %=== Info in English
 \begin{info}
