Automate title page year and licence date

--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -164,6 +164,7 @@
 \thesis{Master's Thesis (30 ECTS)}
 % \thesis{Bakalaureusetöö (9 EAP)}
 % \thesis{Bachelor's Thesis (9 ECTS)}
+% \date{2023-01-02}
 
 
 \begin{document}
