--- a/sections/other-data.tex
+++ b/sections/other-data.tex
@@ -5,16 +5,14 @@
 \begin{table}[h]
 \centering
 \caption{Statements in the \proveit language.}
-\begin{tabular}{| l | l |}
-	\hline
-	\bf{Statement} & \bf{Typeset Example} \\
-	\hline
+\begin{tabular}{ll}
+	\toprule
+	Statement & Typeset Example \\
+	\midrule
 	assignment & $a := 5 + b$ \\
-	\hline
 	uniform choice & $m <- M$ \\
-	\hline
-	function signature & $f : K \times M -> L$\\
-	\hline
+	function signature & $f : K \times M -> L$ \\
+	\bottomrule
 \end{tabular}
 \label{tab:statements}
 \end{table}
