--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -63,6 +63,8 @@
 \usepackage{graphicx}
 \graphicspath{{figures/}}
 
+\usepackage{booktabs}
+
 
 % Packages for defining colourful text together with some colours
 \usepackage{color}
