--- a/sections/figures.tex
+++ b/sections/figures.tex
@@ -46,17 +46,20 @@ Tip: If you add a screenshot, then labeling the parts might help make the text m
 &
 \begin{minipage}{0.55\textwidth}
 \centering
-\begin{tabular}{ l | l |}
-	Node & Decendants \\ \hline
-  1 & 2, 3, 4 \\ \hline
-  2 & 3, 4 \\ \hline
-  3 & \\ \hline
-  4 & \\ \hline
-  5 & 3, 4, 6, 7 \\ \hline
-  6 & 4 \\ \hline
-  7 & 3 \\  \hline
-  8 & 3, 4, 5, 6, 7\\ \hline
-  9 & 3, 4, 5, 6, 7\\ \hline
+\begin{tabular}{cl}
+  \toprule
+	Node & Decendants \\
+  \midrule
+  1 & 2, 3, 4 \\
+  2 & 3, 4 \\
+  3 & \\
+  4 & \\
+  5 & 3, 4, 6, 7 \\
+  6 & 4 \\
+  7 & 3 \\
+  8 & 3, 4, 5, 6, 7\\
+  9 & 3, 4, 5, 6, 7\\
+  \bottomrule
 \end{tabular}
 \end{minipage}
 \end{tabular}
