--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -64,6 +64,7 @@
 \graphicspath{{figures/}}
 
 \usepackage{booktabs}
+\usepackage{subcaption}
 
 
 % Packages for defining colourful text together with some colours
