Fix arrows in math table

--- a/sections/other-data.tex
+++ b/sections/other-data.tex
@@ -10,8 +10,8 @@
 	Statement & Typeset Example \\
 	\midrule
 	assignment & $a := 5 + b$ \\
-	uniform choice & $m <- M$ \\
-	function signature & $f : K \times M -> L$ \\
+	uniform choice & $m \gets M$ \\
+	function signature & $f : K \times M \to L$ \\
 	\bottomrule
 \end{tabular}
 \label{tab:statements}
