--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -81,38 +81,9 @@
 % comments and verbatim text (code)
 \usepackage{verbatim}
 
-
-% Proper way to create coloured code listings
-\usepackage{listings}
-\lstset{
-  %language=python,                % the language of the code
-  language=C++,
-  basicstyle=\footnotesize,        % the size of the fonts that are used for the code
-  %numbers=left,                   % where to put the line-numbers
-  %numberstyle=\footnotesize,      % the size of the fonts that are used for the line-numbers
-  numberstyle=\tiny\color{gray},
-  stepnumber=1,                    % the step between two line-numbers. If it's 1, each line
-                                   % will be numbered
-  numbersep=5pt,                   % how far the line-numbers are from the code
-  backgroundcolor=\color{white},   % choose the background color. You must add \usepackage{color}
-  showspaces=false,                % show spaces adding particular underscores
-  showstringspaces=false,          % underline spaces within strings
-  showtabs=false,                  % show tabs within strings adding particular underscores
-  frame = lines,
-  %frame=single,                   % adds a frame around the code
-  rulecolor=\color{black},		   % if not set, the frame-color may be changed on line-breaks within
-                                   % not-black text (e.g. commens (green here))
-  tabsize=2,                       % sets default tabsize to 2 spaces
-  captionpos=b,                    % sets the caption-position to bottom
-  breaklines=true,                 % sets automatic line breaking
-  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
-  %title=\lstname,                 % show the filename of files included with \lstinputlisting;
-                                   % also try caption instead of title
-  keywordstyle=\color{blue},       % keywCurriculumord style
-  commentstyle=\color{dkgreen},    % comment style
-  stringstyle=\color{mauve},       % string literal style
-  escapeinside={\%*}{*)},          % if you want to add a comment within your code
-  morekeywords={*,game, fun}       % if you want to add more keywords to the set
+\usepackage[outputdir=build]{minted}
+\setminted{
+	autogobble
 }
 
 % If you really want to draw figures in LaTeX use packages tikz or pstricks
