Center example subfigures
subcaption 1.5 changed the default from c.

--- a/sections/figures.tex
+++ b/sections/figures.tex
@@ -38,13 +38,13 @@ Tip: If you add a screenshot, then labeling the parts might help make the text m
 
 \begin{figure} [htbp]
   \centering
-\begin{subfigure}{0.45\textwidth}
+\begin{subfigure}[c]{0.45\textwidth}
 \includegraphics[width=\textwidth]{LCA_2_solutions}
 \caption{Example graph.}
 \end{subfigure}
 \hfil
 % TODO: mixing subfigure and subtable in figure is odd
-\begin{subtable}{0.3\textwidth}
+\begin{subtable}[c]{0.3\textwidth}
 \centering
 \caption{Descendants per node.}
 \begin{tabular}{cl}
