Remove build/ output directory to have minted Overleaf compatibility

--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -64,7 +64,7 @@
 % Nice todo notes
 \usepackage{todonotes}
 
-\usepackage[outputdir=build]{minted}
+\usepackage{minted}
 \setminted{
 	autogobble
 }
